--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
                         <path fill-rule="evenodd"  fill="rgb(34, 34, 34)"
                          d="M5.525,8.650 C7.768,8.650 9.586,6.713 9.586,4.323 C9.586,1.937 7.768,-0.001 5.525,-0.001 C3.283,-0.001 1.467,1.937 1.467,4.324 C1.467,6.713 3.283,8.650 5.525,8.650 ZM2.472,3.917 L8.578,3.917 C8.593,4.054 8.615,4.186 8.615,4.324 C8.615,6.143 7.231,7.618 5.525,7.618 C3.819,7.618 2.436,6.143 2.436,4.324 C2.436,4.186 2.458,4.054 2.472,3.917 ZM7.336,8.588 C7.108,9.441 6.377,10.072 5.498,10.072 C4.623,10.072 3.892,9.441 3.663,8.588 C1.531,9.362 -0.001,11.424 -0.001,13.876 L-0.001,17.001 L11.001,17.001 L11.001,13.876 C11.001,11.424 9.467,9.362 7.336,8.588 Z"/>
                         </svg>
-                        Log in
+                        <span>
+                            Log in
+                        </span>
                     </a>
                     <a href="" class="basket">
                         <svg
@@ -51,7 +53,9 @@
                             <path fill-rule="evenodd"  fill="rgb(34, 34, 34)"
                              d="M1.133,4.104 L15.867,4.104 L17.000,17.000 L0.000,17.000 L1.133,4.104 ZM5.667,4.104 C5.667,4.104 5.667,4.695 5.667,5.862 C5.667,6.833 5.316,7.621 4.533,7.621 C3.751,7.621 3.400,6.833 3.400,5.862 C3.400,4.891 3.400,4.104 3.400,4.104 M13.600,4.104 C13.600,4.104 13.600,4.695 13.600,5.862 C13.600,6.833 13.249,7.621 12.467,7.621 C11.684,7.621 11.333,6.833 11.333,5.862 C11.333,4.891 11.333,4.104 11.333,4.104 M3.967,5.276 C3.967,2.366 5.646,0.000 8.500,0.000 C11.346,0.000 13.033,2.896 13.033,5.276 C13.033,6.420 11.900,6.420 11.900,5.276 C11.900,3.493 10.759,1.172 8.500,1.172 C6.220,1.172 5.100,3.488 5.100,5.276 C5.100,6.439 3.967,6.457 3.967,5.276 Z"/>
                             </svg>
-                        Basket(0)
+                        <span>
+                            Basket(0)
+                        </span>
                     </a>
                     <a href="" class="search">
                         <svg
