squares section finished

--- a/index.html
+++ b/index.html
@@ -73,17 +73,113 @@
       <main>
           <section class="general-frame">
               <div class="container">
-                  <div class="wrapper">
-                      <h1>
-                          Hazy shade of spring
-                      </h1>
-                      <h2>
-                          Quisque lorem tortor fringilla sed, vestibulum id, eleifend justo.
-                      </h2>
-                      <a href="#">
-                          check new arrivals
-                      </a>
+                  <div class="general-carousel owl-carousel owl-theme">
+                      <div class="item">
+                          <h1>
+                              Hazy shade of spring
+                          </h1>
+                          <h2>
+                              Quisque lorem tortor fringilla sed, vestibulum id, eleifend justo.
+                          </h2>
+                          <a href="#">
+                              check new arrivals
+                          </a>
+                      </div>
+                      <div class="item">
+                          <h1>
+                              Hazy shade of spring
+                          </h1>
+                          <h2>
+                              Quisque lorem tortor fringilla sed, vestibulum id, eleifend justo.
+                          </h2>
+                          <a href="#">
+                              check new arrivals
+                          </a>
+                      </div>
                   </div>
+              </div>
+          </section>
+          <section class="squares-frame">
+              <div class="container">
+                <a href="" class="big">
+                    <div class="title">
+                        <span class="header">HEATHER GREY BASICS</span>
+                        <span class="underheader">New Arrival</span>
+                    </div>
+                </a>
+                <a href="" class="empty">
+                </a>
+                <a href="" class="bird">
+                    <div class="title">
+                        <img src="images/bird.png" alt="Icon">
+                        <span class="header">
+                            Opening Ceremony @IndonesiaFW tomorrow, PMers! Are you ready for the biggest fashion movement in
+                        </span>
+                        <span class="underheader">
+                            @PuspitaMarthaID
+                        </span>
+                    </div>
+                </a>
+                <a href="" class="price">
+                    <div class="title">
+                        <span class="header">
+                            chuck taylors
+                        </span>
+                        <span class="underheader">
+                            $125.00
+                        </span>
+                    </div>
+                </a>
+                <a href="" class="arrow">
+                    <div class="title">
+                        <img src="images/arrow.png" alt="Icon">
+                        <span class="header">
+                            jaxon hat
+                        </span>
+                        <span class="underheader">
+                            branie hat
+                        </span>
+                    </div>
+                </a>
+                <a href="" class="empty"></a>
+                <a href="" class="bird">
+                    <div class="title">
+                        <img src="images/bird.png" alt="Icon">
+                        <span class="header">
+                            Girls, Girls, Girls: A Look Back at 50 Years of the Pirelli Calendar
+                        </span>
+                        <span class="underheader">
+                            @Vogue
+                        </span>
+                    </div>
+                </a>
+                <a href="" class="price">
+                    <div class="title">
+                        <span class="header">
+                            basic blazer
+                        </span class="underheader">
+                        <span>
+                            from $199.00
+                        </span>
+                    </div>
+                </a>
+                <a href="" class="arrow">
+                    <div class="title">
+                        <img src="images/arrow.png" alt="Icon">
+                        <span class="header">
+                            elegant shoes
+                        </span>
+                        <span class="underheader">
+                            BRAIDED LEATHER
+                        </span>
+                    </div>
+                </a>
+                <a href="" class="big">
+                    <div class="title">
+                        <span class="header">jeans for adventure</span>
+                        <span class="underheader">New Arrival</span>
+                    </div>
+                </a>
               </div>
           </section>
       </main>
