--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
                     <div class="title">
                         <span class="header">
                             basic blazer
-                        </span class="underheader">
-                        <span>
+                        </span>
+                        <span class="underheader">
                             from $199.00
                         </span>
                     </div>
@@ -180,6 +180,20 @@
                         <span class="underheader">New Arrival</span>
                     </div>
                 </a>
+              </div>
+          </section>
+          <section class="signup-frame">
+              <div class="container">
+                <h2>
+                    sign up to receive our updates
+                </h2>
+                <h3>
+                    Nulla ipsum dolor lacus, suscipit adipiscing. Cum sociis natoque penatibus et ultrices volutpat.
+                </h3>
+                <form action="">
+                    <input type="text" placeholder="Your e-mail">
+                    <button type="button" name="button">add</button>
+                </form>
               </div>
           </section>
       </main>
