signup-frame finished

--- a/index.html
+++ b/index.html
@@ -196,6 +196,11 @@
                 </form>
               </div>
           </section>
+          <section class="inspiration-frame">
+              <div class="container">
+
+              </div>
+          </section>
       </main>
 </body>
 <script src="/js/jquery-3.2.1.min.js"></script>
