inspiration-frame finished

--- a/index.html
+++ b/index.html
@@ -198,7 +198,12 @@
           </section>
           <section class="inspiration-frame">
               <div class="container">
-
+                <div class="inspiration-carousel owl-carousel owl-theme">
+                    <div class="item">
+                    </div>
+                    <div class="item">
+                    </div>
+                </div>
               </div>
           </section>
       </main>
