--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
     </header>
-      <main>
+    <main>
           <section class="general-frame">
               <div class="container">
                   <div class="general-carousel owl-carousel owl-theme">
@@ -206,7 +206,83 @@
                 </div>
               </div>
           </section>
-      </main>
+    </main>
+    <footer>
+        <div class="container">
+            <div class="item">
+                <h3>Collection</h3>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="">Woman(1725)</a>
+                        </li>
+                        <li>
+                            <a href="">Men(635)</a>
+                        </li>
+                        <li>
+                            <a href="">Kids(2514)</a>
+                        </li>
+                        <li>
+                            <a href="">Comming soon(76)</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="item">
+                <h3>Site</h3>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="">Terms of Service</a>
+                        </li>
+                        <li>
+                            <a href="">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="">Copyright Policy</a>
+                        </li>
+                        <li>
+                            <a href="">Press Kit</a>
+                        </li>
+                        <li>
+                            <a href="">Support</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="item">
+                <h3>Shop</h3>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="">About us</a>
+                        </li>
+                        <li>
+                            <a href="">Shipping Metods</a>
+                        </li>
+                        <li>
+                            <a href="">Career</a>
+                        </li>
+                        <li>
+                            <a href="">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="item">
+                <h3>Social</h3>
+                <h4>
+                    Shoper is made with love in Warsaw,
+                    2014 © All rights reserved. El Passion
+                </h4>
+                <div class="social-links">
+                    <a href=""></a>
+                    <a href=""></a>
+                    <a href=""></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 <script src="/js/jquery-3.2.1.min.js"></script>
 <script src="/plugins/owlcarousel/dist/js/owl.carousel.min.js"></script>
