--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Главная</title>
   <meta name="description" content="Main-page">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="" />
   <link rel="stylesheet" type="text/css"  href="/css/style.css">
   <link rel="stylesheet" type="text/css"  href="/css/fonts.css">
@@ -12,7 +13,8 @@
     <header>
         <div class="container">
             <div class="wrapper">
-                <img src="images/logo.png" alt="Logo">
+                <img src="images/logo.png" alt="Logo" class="logo-main">
+                <img src="images/logo-m.png" alt="Logo" class="logo-mobile">
                 <nav>
                     <ul>
                         <li>
@@ -64,8 +66,18 @@
                              width="16px" height="16px">
                             <path fill-rule="evenodd"  fill="rgb(48, 48, 48)"
                              d="M9.211,8.427 C8.867,8.814 8.733,8.957 8.443,9.167 C6.404,10.762 3.431,10.638 1.540,8.784 C-0.502,6.784 -0.514,3.531 1.515,1.519 C3.541,-0.495 6.840,-0.506 8.881,1.493 C10.807,3.379 10.927,6.383 9.229,8.408 L9.211,8.427 ZM7.963,2.404 C6.434,0.904 3.958,0.916 2.438,2.424 C0.916,3.933 0.925,6.374 2.456,7.872 C3.988,9.374 6.462,9.363 7.982,7.854 C9.502,6.344 9.495,3.905 7.963,2.404 ZM16.000,14.597 L14.687,15.999 L9.012,9.931 L9.958,8.995 L16.000,14.597 Z"/>
-                            </svg>
-                        </a>
+                        </svg>
+                        <svg
+                         xmlns="http://www.w3.org/2000/svg"
+                         xmlns:xlink="http://www.w3.org/1999/xlink"
+                         width="31px" height="31px">
+                        <path fill-rule="evenodd"  fill="rgb(34, 34, 34)"
+                         d="M2.485,7.727 L28.501,7.727 L30.503,30.528 L0.484,30.528 L2.485,7.727 ZM10.490,7.727 C10.490,7.727 10.490,8.773 10.490,10.836 C10.490,12.554 9.871,13.946 8.489,13.946 C7.108,13.946 6.488,12.554 6.488,10.836 C6.488,9.119 6.488,7.727 6.488,7.727 M24.499,7.727 C24.499,7.727 24.499,8.773 24.499,10.836 C24.499,12.554 23.879,13.946 22.498,13.946 C21.116,13.946 20.497,12.554 20.497,10.836 C20.497,9.119 20.497,7.727 20.497,7.727 M7.489,9.800 C7.489,4.655 10.453,0.472 15.493,0.472 C20.519,0.472 23.499,5.592 23.499,9.800 C23.499,11.823 21.497,11.822 21.497,9.800 C21.497,6.648 19.483,2.545 15.493,2.545 C11.467,2.545 9.490,6.639 9.490,9.800 C9.490,11.856 7.489,11.888 7.489,9.800 Z"/>
+                        </svg>
+                    </a>
+                </div>
+                <div class="mobile-button">
+                    <span></span>
                 </div>
             </div>
         </div>
