--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Главная</title>
   <meta name="description" content="Main-page">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
   <link rel="icon" type="image/png" href="" />
   <link rel="stylesheet" type="text/css"  href="/css/style.css">
   <link rel="stylesheet" type="text/css"  href="/css/fonts.css">
